src/app/index.less
@import './assets/fonts/roboto/style.less';
@import './assets/fonts/roboto-mono/style.less';
@import './assets/fonts/material-design-icons/style.less';

body {
  min-width: 320px;
  & > main, & > main > md-content {
    height: 100%;
  }
}

md-card {
  margin-bottom: 20px;
}
login,  login md-card {
  display: block;
  height: auto;
}

body {
  .logout {
    margin-right: 0;
  }

  md-tabs-wrapper {
    margin: 0 10px;
  }

  md-content {
    background-color: #eee;
  }

  md-card md-content {
    background-color: #fff;
  }

  md-tabs md-ink-bar {
    color: rgb(2,136,209);
    background-color: rgb(2,136,209);
    height: 4px;
  }

  .offline .offline-hide {
    opacity: 0.5;
  }
}

